Vertex parenting broken on Curve object with multiple splines #112208

Closed
opened 2023-09-10 23:29:08 +02:00 by RumenBelev · 3 comments
First-time contributor

System Information
Operating system: Windows 8
Graphics card: NVIDIA

Blender Version
Broken: (3.6.0)
Worked: (2.83.12)

Short description of error
Vertex parenting broken on Curve object with multiple splines

Exact steps for others to reproduce the error

  1. Add Bezier Curve object
  2. In edit mode extrude one of the control points couple of times
  3. Select all points and duplicate the spline
  4. In object mode add an object to vertex parent - say Monkey
  5. Try vertex parenting to any of the points from the second spline - the result is the object is parented to a corresponding point from the first spline - not to the desired control point.

Control point parenting worked fine in version 2.83. I haven't tested on more recent past versions.

**System Information** Operating system: Windows 8 Graphics card: NVIDIA **Blender Version** Broken: (3.6.0) Worked: (2.83.12) **Short description of error** Vertex parenting broken on Curve object with multiple splines **Exact steps for others to reproduce the error** 1. Add Bezier Curve object 2. In edit mode extrude one of the control points couple of times 3. Select all points and duplicate the spline 4. In object mode add an object to vertex parent - say Monkey 5. Try vertex parenting to any of the points from the second spline - the result is the object is parented to a corresponding point from the first spline - not to the desired control point. Control point parenting worked fine in version 2.83. I haven't tested on more recent past versions.
RumenBelev added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-10 23:29:09 +02:00
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-09-11 10:32:11 +02:00
Member

Got a fix, will post PR shortly

Got a fix, will post PR shortly
Philipp Oeser self-assigned this 2023-09-11 10:58:30 +02:00
Philipp Oeser added the
Module
Modeling
label 2023-09-11 10:58:38 +02:00
Member

Just for reference: this was caused by 346023b457

Just for reference: this was caused by 346023b457d3
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-11 12:20:47 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112208
No description provided.