Fix #112208: Vertex parenting index wrong with multiple splines

Caused by 346023b457d3.

Above commit made variables too local (starting index with zero in each
nurb of the curve/surface object, but we need the "overall" index).

Should be good for LTS.

Pull Request: https://projects.blender.org/blender/blender/pulls/112222